--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Mateusz Tybura
 description: My Personal Blog
 author: Mateusz Tybura
-logo: /hcz-jekyll-blog/static/img/avatar.png
-github: https://github.com/codeasashu
+logo: /static/img/avatar.png
+github: https://github.com/tyburam
 about: Software Engineer
 
 baseurl: "https://tyburam.github.io/"
